@@ -41,6 +41,8 @@
   *  - Fixed invalid USB controller PLL prescaler values for the ATMEGAxxU2 controllers
   *  - Fixed lack of support for the ATMEGA32U2 in the DFU and CDC class bootloaders
   *  - Fixed Benito project not resetting the target AVR automatically when programming has completed
+  *  - Fixed DFU bootloader programming not discarding the correct number of filler bytes from the host when non-aligned programming
+  *    ranges are specified (thanks to Thomas Bleeker)
   *
   *  \section Sec_ChangeLog091223 Version 091223
   *
